--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,12 @@
 eclipse.preferences.version=1
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
+encoding//Debug/port/MemMang/subdir_rules.mk=UTF-8
+encoding//Debug/port/MemMang/subdir_vars.mk=UTF-8
+encoding//Debug/port/TivaM4/subdir_rules.mk=UTF-8
+encoding//Debug/port/TivaM4/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
+encoding//Debug/src/subdir_rules.mk=UTF-8
+encoding//Debug/src/subdir_vars.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
